Update and rename Preview website link to Readme

--- a/Readme
+++ b/Readme
@@ -1,6 +1,6 @@
-check for demo.
+#check for demo.
 use this link 
-"https://coder-sagar-sketch.github.io/E-dairy-Shop/helllo"
+https://coder-sagar-sketch.github.io/E-dairy-Shop/helllo
             
         
         
